<resources>
    <string name="app_name" translatable="false">Parking Finder</string>
    <string name="festival_name">Festival name</string>
    <string name="description">Description</string>
    <string name="add_event">Add event</string>
    <string name="event_date">Event date</string>
    <string name="address">Address</string>
    <string name="back">Back</string>
    <string name="set_date">Set date</string>
    <string name="show_map">Show map</string>
    <string name="event_list">Event list</string>
    <string name="settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="no_account">Don\'t have an account? Register</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account">Already have an account? Log in</string>
    <string name="event_reminder">Event Reminder</string>
    <string name="login_sucessful">Login successful!</string>
    <string name="error">Error: %1$s</string>
    <string name="fill_fields">Fill in all the fields!</string>
    <string name="sign_up_sucessful">Sign up sucessful!</string>
    <string name="notification_hour_title">Notification hour</string>
    <string name="notification_hour_description">Hour of the day to send notifications</string>
    <string name="notification_minute">Notification minute</string>
    <string name="notification_minute_description">Minute of the hour to send notifications</string>
    <string name="hello_user">Hello, %1$s!</string>
    <string name="status_title">Current parking status</string>
    <string name="free_parking">Free available parking spot</string>
    <string name="paid_parking">Paid available parking spot</string>
    <string name="select_time">Select time</string>
    <string name="park_until">Park until: </string>
    <string name="save_button">Save</string>
    <string name="live_camera">Live Camera</string>
    <string name="parking_id">Parking ID</string>
    <string name="free_busy">Free/Busy</string>
    <string name="free_park">Free</string>
    <string name="busy_park">Busy</string>
    <string name="add_current_parking">Add current parking</string>
    <string name="my_parkings">My parking</string>
    <string name="log_out">Log Out</string>
    <string name="active">Active</string>
    <string name="history">History</string>
    <string name="name">Name</string>
    <string name="parking">Parking: </string>
    <string name="in_town"> in </string>
    <string name="post_code"> post code </string>
    <string name="available_spaces">, Available Spaces: </string>
    <string name="free_spaces">, Free Spaces: </string>
    <string name="disabled_parking_spaces">, Disabled Parking Spaces: </string>
    <string name="price">, Price: </string>
    <string name="cona">, Cona: </string>
    <string name="stop_parking">Stop parking</string>
    <string name="confirm_stop_parking">Are you sure you want to stop parking?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>