<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="640px"
        android:layout_height="640px"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="Live Camera"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/videoView"
        app:layout_constraintBottom_toTopOf="@+id/button">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <!-- Header Row -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/parking_id"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#E0E0E0"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/free_busy"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#F0F0F0"
                    android:textStyle="bold" />
            </TableRow>

            <!-- Rows 2 to 12 -->
            <!-- Update each parking ID number -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/park0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#E0E0E0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="1" />

                <TextView
                    android:id="@+id/space0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F0F0F0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/free_park" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/park1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#E0E0E0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="2" />

                <TextView
                    android:id="@+id/space1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F0F0F0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/busy_park" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/park2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#E0E0E0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="3" />

                <TextView
                    android:id="@+id/space2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F0F0F0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/busy_park" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/park3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#E0E0E0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="4" />

                <TextView
                    android:id="@+id/space3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F0F0F0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/busy_park" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/park4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#E0E0E0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="5" />

                <TextView
                    android:id="@+id/space4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F0F0F0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/busy_park" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/park5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#E0E0E0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="6" />

                <TextView
                    android:id="@+id/space5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F0F0F0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/busy_park" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/park6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#E0E0E0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="7" />

                <TextView
                    android:id="@+id/space6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F0F0F0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/busy_park" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/park7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#E0E0E0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="8" />

                <TextView
                    android:id="@+id/space7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#F0F0F0"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/busy_park" />
            </TableRow>

        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
